--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -586,3 +586,9 @@ Anguelov and Dragomir and Erhan and Dumitru and Vincent and Vanhoucke and Rabino
   title = {Transformers: State-of-the-Art Natural Language Processing},
   year = {2020}
 }
+
+@misc { 96,
+  author = {Han, Xu and Zhang, Zhengyan and Ding, Ning and Gu, Yuxian and Liu, Xiao and Huo, Yuqi and Qiu, Jiezhong and Yao, Yuan and Zhang, Ao and Zhang, Liang and Han, Wentao and Huang, Minlie and Jin, Qin and Lan, Yanyan and Liu, Yang and Liu, Zhiyuan and Lu, Zhiwu and Qiu, Xipeng and Song, Ruihua and Tang, Jie and Wen, Ji-Rong and Yuan, Jinhui and Zhao, Wayne Xin and Zhu, Jun},
+  title = {Pre-Trained Models: Past, Present and Future},
+  year = {2021},
+}
