--- a/document/FrontMatter/SupervisorOpinion.tex
+++ b/document/FrontMatter/SupervisorOpinion.tex
@@ -1,3 +1,21 @@
 \begin{opinion}
-    Opiniones de los tutores
+En la actualidad el Aprendizaje Automático ha llegado a todas las ramas de la industria, ayudando a resolver un gran número de problemas pero creando la necesidad de un enorme número de expertos para poder utilizar las herramientas adecuadas en cada caso.
+En este escenario el AutoML propone una solución ayudando con la selección de forma automática de las mejores soluciones con el problema añadido de que incrementa el costo computacional ya que tiene que evaluar muchas soluciones para resolver cada problema. El área de investigación en que incursiona el estudiante está relacionada con la inclusión de modelos preentrenados a un sistema de AutoML heterogéneo.
+
+El estudiante Karel Díaz Vergara en esta investigación se adentra en un tema del estado del arte de gran actualidad y para eso tuvo que utilizar conocimientos de varias asignaturas de la carrera y otros que no son parte del currículum estándar. Su propuesta implicó estudiar el estado del arte de las herramientas de AutoML, así como las arquitecturas de modelos preentrenados más usadas en este dominio. Además, realizó una implementación computacional de varias de estas arquitecturas, de forma que son compatibles con AutoGOAL, una biblioteca de AutoML del estado del arte.
+
+Sus resultados, aunque modestos debido al alto costo computacional de entrenar dichas arquitecturas, resultan convincentes, pues permiten atacar algunos tipos de problemas que hasta ahora no eran solubles en AutoGOAL eficientemente. Además, la implementación es fácilmente extensible a nuevos modelos preentrenados que puedan ser aplicados en tareas novedosas.
+
+Para poder afrontar el trabajo, el estudiante tuvo que revisar literatura científica relacionada con la temática así como soluciones existentes y bibliotecas de software que pueden ser apropiadas para su utilización. Todo ello con sentido crítico, determinando las mejores aproximaciones y también las dificultades que presentan. Todo el trabajo fue realizado por el estudiante con una elevada constancia, capacidad de trabajo y habilidades, tanto de gestión, como de desarrollo y de investigación.
+
+Por estas razones pedimos que le sea otorgada al estudiante Karel Díaz Vergara la máxima calificación y, de esta manera, pueda obtener el título de Licenciado en Ciencia de la Computación.
+
+\begingroup
+  \centering
+  \wildcard{Dr. Alejandro Piad Morffis}
+  \hspace{1cm}
+  \wildcard{Lic. Carlos Bermudez Porto}
+  \par
+\endgroup
+
 \end{opinion}
