--- a/document/FrontMatter/Thanks.tex
+++ b/document/FrontMatter/Thanks.tex
@@ -1,3 +1,13 @@
 \begin{acknowledgements}
-    Agradecimientos
+Quiero agradecer a mi mamá que me apoyó durante toda la carrera incluso estando lejos, por tanto tiempo, siempre me ayudó y me escuchó. A mi papá que no ha dejado de preocuparse un día tanto por mi desempeño como por mi salud. A mi hermana Karina que ha sido la compañera con la que he disfrutado tantos bellos momentos. A mi hermano Jorgito que gracias a él muchas veces he tomado las decisiones correctas y me ha sabido guiar.
+
+A mi amigo Samuel con el cual llevo compartiendo desde los inicios y siempre me ha extendido su mano sin importar lo que conlleve, a su novia Arlen que me ha tratado como uno más de la familia.
+A Damián, Lily, Elizabeth, Aitana, Enmanuel, Gabriel, Lopetegui, Mauricio y Rodovaldo por los momentos y las risas que hemos compartido(se me quedan muchos más).
+Quiero también agradecer a todos los que formaron parte de mi vida en beca y que de alguna forma dentro de las dificultados hicieron que fuera divertido.
+A Eziel que siempre tiene buenas películas para ver.
+A mi amigo Frank Abel por las tantas noches que pasamos compartiendo el desarrollo de proyectos.
+A Alben, el cual considero una persona genial, que más que un amigo es un hermano que me ha acompañado tanto en los buenos momentos como en los malos.
+A mi tutor Carlos Bermudez que fue paciente conmigo y siempre estuvo ahí para resolver mis dudas.
+A Piad y Suilan que han sido unos profesores increíbles en los cuales siempre he encontrado inspiración.
+A mis profesores, amigos y aquellas personas las cuales de alguna forma u otra aportaron su granito a lo que soy hoy, gracias.
 \end{acknowledgements}
