--- a/document/MainMatter/Proposal.tex
+++ b/document/MainMatter/Proposal.tex
@@ -1,8 +1,8 @@
 \chapter{Propuesta: Autogoal Model Based}\label{chapter:proposal}
 
-Como se mencionó en la introducción, AutoGoal es un \textit{framework} de \textit{auto machine learning} escrito en python capaz de resolver problemas en diferentes dominios mediante la construcción de pipelines que representan posibles soluciones a un problema dado. Usuarios no tan expertos pueden usar esta librería interactuando con un API de alto nivel a través de la clase \textbf{AutoML} la cual engloba las diferentes etapas del proceso de AutoML en una interfaz caja negra, además usuarios más expertos pueden interactuar con un API de bajo nivel para realizar sus experimentaciones ya sea cambiando los valores de los parámetros, métricas, tipos de datos, etc.
+AutoGoal es un \textit{framework} de \textit{auto machine learning} escrito en python capaz de resolver problemas en diferentes dominios mediante la construcción de pipelines que representan posibles soluciones a un problema dado. Usuarios no tan expertos pueden usar esta librería interactuando con un API de alto nivel a través de la clase \textbf{AutoML} la cual engloba las diferentes etapas del proceso de AutoML en una interfaz caja negra, además usuarios más expertos pueden interactuar con un API de bajo nivel para realizar sus experimentaciones ya sea cambiando los valores de los parámetros, métricas, tipos de datos, etc.
 
-La propuesta de esta tesis es añadir modelos pre-entrenados en diferentes dominios al framework de AutoGoal, el objetivo es que estos modelos puedan formar parte del espacio de búsqueda de AutoGoal, de forma tal que puedan ser candidatos a soluciones, esto trae como ventajas que no haya que entrenar modelos desde cero, muchos modelos preentrenados resuelven populares tareas de clasificación de imágenes, traducción, clasificación de audios, resumen, etc; compitiendo con el estado del arte actual lo que puede traer buenos resultados en un menor tiempo que compitan con soluciones de AutoGoal.
+La propuesta de esta tesis es añadir modelos pre-entrenados en diferentes dominios al framework de AutoGoal. El objetivo es que estos modelos puedan formar parte del espacio de búsqueda de AutoGoal, de forma tal que puedan ser candidatos a soluciones, esto trae como ventajas que no haya que entrenar modelos desde cero. Muchos modelos preentrenados resuelven populares tareas de clasificación de imágenes, traducción, clasificación de audios, resumen, etc; compitiendo con el estado del arte actual lo que puede traer buenos resultados en un menor tiempo que compitan con soluciones de AutoGoal.
 
 En este capítulo se hace uso de varias herramientas de \textit{HuggingFace} para darle solución a esta problemática mediante la selección de algunos modelos pre-entrenados en diferentes dominios basándose en su popularidad, ya sea mayor cantidad de descargas. Estos modelos se integran a AutoGoal haciendo uso de la biblioteca \textit{Transformers}, la cual se utiliza para realizar todo el proceso, desde la descarga del modelo, preparación de datos y reentrenamiento (\textit{fine tuning}).
 
@@ -11,7 +11,7 @@ En esta sección se propone la integración del modelo preentrenado BEiT como al
 
 Descripción de 'microsoft/beit-base-patch16-224-pt22k-ft22k'\footnote[1]{\url{https://huggingface.co/microsoft/beit-base-patch16-224-pt22k-ft22k}}: Modelo BEiT preentrenado de manera autosupervisada en \textit{ImageNet-22k}, también llamado \textit{ImageNet-21k}, conjunto de datos que contiene 14 millones de imágenes y 21841 clases, las imágenes se encuentran a una resolución de 224x224 píxeles, tal modelo fue ajustado(\textit{fine tune}) en el mismo conjunto de datos a una resolución de 224x224 píxeles.
 
-Mediante el método \texttt{ from\_pretrained } de  la clase \texttt{ BeitForImageClassification } se descarga el modelo con sus pesos y además es cacheado, este método recibe como primer parámetro el \textit{path} del \textit{checkpoint} que se va a descargar, el cual se menciona arriba. Como se le va a hacer \textit{fine-tuning} a este \textit{checkpoint} es necesario redefinir el vocabulario, por lo que se tiene que pasar dos diccionarios que representan las etiquetas del conjunto de datos que se van a utilizar para reentrenar BEiT con sus respectivos ids únicos, es decir cada etiqueta tiene un número único, y mediante estos dos diccionarios se puede saber el id conociendo la etiqueta y viceversa, además se debe pasar el argumento \texttt{ ignore\_mismatched\_sizes=True }, esto asegurará que la capa de salida, se deseche y se reemplace por una nueva capa de salida para la clasificación que será inicializada aleatoriamente e incluye un número personalizado de neuronas.
+Mediante el método \texttt{ from\_pretrained } de  la clase \texttt{ BeitForImageClassification } se descarga el modelo con sus pesos y además es cacheado. Este método recibe como primer parámetro el \textit{path} del \textit{checkpoint} que se va a descargar, el cual se menciona arriba. Como se le va a hacer \textit{fine-tuning} a este \textit{checkpoint} es necesario redefinir el vocabulario, por lo que se tiene que pasar dos diccionarios que representan las etiquetas del conjunto de datos que se van a utilizar para reentrenar BEiT con sus respectivos ids únicos. Cada etiqueta tiene un número único, y mediante estos dos diccionarios se puede saber el id conociendo la etiqueta y viceversa. Además se debe pasar el argumento \texttt{ ignore\_mismatched\_sizes=True }, esto asegurará que la capa de salida, se deseche y se reemplace por una nueva capa de salida para la clasificación que será inicializada aleatoriamente e incluye un número personalizado de neuronas.
 
 \begin{verbatim}
     self._model = BeitForImageClassification.from_pretrained(
@@ -22,7 +22,7 @@ Mediante el método \texttt{ from\_pretrained } de  la clase \texttt{ BeitForIma
     )
 \end{verbatim}
 
-Luego se hace uso de la clase \texttt{TrainingArguments} con el objetivo de generar una instancia que luego será pasada al \texttt{Trainer}, esta recibe como primer argumento el nombre que tomará nuestro \textit{checkpoint} y luego recibe una serie de parámetros que definen el proceso de reentrenamiento del modelo, aquí se detallan los parámetros que se usaron para instanciar esta clase:
+Luego se hace uso de la clase \texttt{TrainingArguments} con el objetivo de generar una instancia que luego será pasada al \texttt{Trainer}. Esta recibe como primer argumento el nombre que tomará nuestro \textit{checkpoint} y luego recibe una serie de parámetros que definen el proceso de reentrenamiento del modelo. Aquí se detallan los parámetros que se usaron para instanciar esta clase:
 
 \begin{verbatim}
     args = TrainingArguments(
