--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -26,7 +26,7 @@ En el proceso de AutoML destacan tres tareas importantes, la primera es el espac
 \subsection{Espacio de búsqueda}
 La búsqueda de espacio define un paradigma estructural que los métodos de optimización de arquitecturas pueden explorar, por lo que diseñar un buen espacio de búsqueda es un problema retador de vital importancia. En general de un buen espacio de búsqueda se espera que excluya el sesgo humano y que sea lo suficientemente flexible para cubrir una gran variedad de arquitecturas de modelos.
 
-Un espacio de búsqueda relativamente sencillo es el espacio de redes neuronales con estrucutra de cadenas(\textit{chain-structured neural network}). Una arquitectura de red neuronal con estructura de cadena puede ser escrita como una secuencia de capas, donde la $i$-ésima capa $L_i$ recibe en su entrada la salida de la capa $L_{i-1}$, y su salida sirve como entrada de la capa $L_{i + 1}$. Entonces el espacio de búsqueda está parametrizado por:
+Un espacio de búsqueda relativamente sencillo es el espacio de redes neuronales con estructura de cadenas(\textit{chain-structured neural network}). Una arquitectura de red neuronal con estructura de cadena puede ser escrita como una secuencia de capas, donde la $i$-ésima capa $L_i$ recibe en su entrada la salida de la capa $L_{i-1}$, y su salida sirve como entrada de la capa $L_{i + 1}$. Entonces el espacio de búsqueda está parametrizado por:
 
 \begin{itemize}
 \item El máximo número de capas.
@@ -34,9 +34,9 @@ Un espacio de búsqueda relativamente sencillo es el espacio de redes neuronales
 \item Los hiperparámetros asociados con la operación (p.e. número de filtros, tamaño del kernel). Los parámetros son condicionados por lo que el espacio de búsqueda es condicional.
 \end{itemize}
 
-Trabajos recientes en NAS (\parencite{56} \parencite{65} \parencite{66} \parencite{67} \parencite{68}) incorporan elementos de diseño moderno conocidos como arquitecturas hechas a mano, como conexiones de salto que permiten construir redes de múltiples ramas. En este caso la entrada de la capa $i$ puede ser descrita como una función que combina la salida de capas anteriores. El empleo de tal función da como resultado más grados de libertad.\\
+Trabajos recientes en NAS \parencite{56, 65, 66, 67, 68} incorporan elementos de diseño moderno conocidos como arquitecturas hechas a mano, como conexiones de salto que permiten construir redes de múltiples ramas. En este caso la entrada de la capa $i$ puede ser descrita como una función que combina la salida de capas anteriores. El empleo de tal función da como resultado más grados de libertad.\\
 
-Consecuentemente, este espacio de búsqueda basado en celdas es también empleado exitosamente por muchos trabajos recientes \parencite{68} \parencite{37} \parencite{62} \parencite{67} \parencite{69}. Sin embargo, surge una nueva elección de diseño cuando se utiliza un espacio de búsqueda basado en celdas, cómo elegir la macroarquitectura: ¿cuántas celdas se utilizarán y cómo se conectarán para construir el modelo real. Por ejemplo, \parencite{56} construyen un modelo secuencial a partir de celdas, en el que cada celda recibe como entrada las salidas de las dos celdas anteriores, mientras que \parencite{69} emplean la estructura de alto nivel de arquitecturas conocidas manualmente diseñadas, como DenseNet \parencite{70}, y usan sus celdas dentro de estos modelos. Un paso en la dirección de optimizar las macroarquitecturas es el espacio de búsqueda jerárquico introducido por \parencite{38}, que consta de varios niveles de motivos. El primer nivel consta del conjunto de operaciones primitivas, el segundo nivel de diferentes motivos que conectan operaciones primitivas a través de un DAG, el tercer nivel de motivos que codifican cómo conectar motivos de segundo nivel, y así sucesivamente. El espacio de búsqueda basado en celdas puede verse como un caso especial de este espacio de búsqueda jerárquico donde el número de niveles es tres, los motivos del segundo nivel corresponden a las celdas y el tercer nivel es la macroarquitectura codificada. \\
+Consecuentemente, este espacio de búsqueda basado en celdas es también empleado exitosamente por muchos trabajos recientes \parencite{68, 37, 62, 67, 69}. Sin embargo, surge una nueva elección de diseño cuando se utiliza un espacio de búsqueda basado en celdas, cómo elegir la macroarquitectura: ¿cuántas celdas se utilizarán y cómo se conectarán para construir el modelo real. Por ejemplo, \parencite{56} construyen un modelo secuencial a partir de celdas, en el que cada celda recibe como entrada las salidas de las dos celdas anteriores, mientras que \parencite{69} emplean la estructura de alto nivel de arquitecturas conocidas manualmente diseñadas, como DenseNet \parencite{70}, y usan sus celdas dentro de estos modelos. Un paso en la dirección de optimizar las macroarquitecturas es el espacio de búsqueda jerárquico introducido por \parencite{38}, que consta de varios niveles de motivos. El primer nivel consta del conjunto de operaciones primitivas, el segundo nivel de diferentes motivos que conectan operaciones primitivas a través de un DAG, el tercer nivel de motivos que codifican cómo conectar motivos de segundo nivel, y así sucesivamente. El espacio de búsqueda basado en celdas puede verse como un caso especial de este espacio de búsqueda jerárquico donde el número de niveles es tres, los motivos del segundo nivel corresponden a las celdas y el tercer nivel es la macroarquitectura codificada. \\
 La elección del espacio de búsqueda determina en gran medida la dificultad del problema de optimización: incluso para el caso del espacio de búsqueda basado en una sola celda con macroarquitectura fija, el problema de optimización sigue siendo discontinuo y con dimensiones relativamente altas.
 
 
@@ -54,9 +54,9 @@ Las técnicas de aprendizaje profundo constituyen un subconjunto de metodología
 
 \textit{Reinforcement Learning} \parencite{42} es otro enfoque que se ha utilizado para encontrar la mejor arquitectura de red. \parencite{35} utilizaron una red neuronal recurrente (LSTM) con refuerzo para componer la arquitectura de la red neuronal. Más específicamente, la red neuronal recurrente se entrena a través de un algoritmo de búsqueda basado en gradiente llamado REINFORCE \parencite{44} para maximizar la precisión esperada de la arquitectura de la red neuronal generada. \parencite{45} introdujo un algoritmo de \textit{meta-modeling} llamado MetaQNN basado en el aprendizaje por refuerzo para generar automáticamente la arquitectura de la red neuronal convolucional para una nueva tarea. Las capas de la red neuronal convolucional son elegidas secuencialmente por un agente de aprendizaje que está entrenado usando \textit{Q-learning} con una técnica de exploración $\mathcal{E}$-\textit{greedy}. Simplemente, el agente explora un espacio de búsqueda finito de un conjunto de arquitecturas e iterativamente descubre diseños de arquitectura con un rendimiento mejorado en la nueva tarea a aprender.
 
-\textit{Gradient-based optimization} es otra forma común para búsquedas de arquitecturas de redes neuronales. \parencite{46} propuso un enfoque basado en la relajación contínua de la arquitectura neuronal permitiendo usar descenso del gradiente para la búsqueda de la arquitectura. Los experimentos mostraron que este enfoque sobresale en encontrar arquitecturas convolucionales de alto rendimiento para la clasificación de imágenes en CIFAR-10, y en los conjuntos de datos de \textit{ImageNet}. \parencite{47} propuso un enfoque de optimización del descenso del gradiente para aprender la arquitectura de la red y parámetros simultáneamente. \parencite{48} usaron un enfoque basado en el gradiente para aprender arquitectura de redes. Los resultados experimentales en dos arquitecturas de redes diferentes: \textit{ResNet} y \textit{ResNeXt} mostraron que este enfoque recae en mejor precisión una reducción significativa en el número de parámetros. 
+\textit{Gradient-based optimization} es otra forma común para búsquedas de arquitecturas de redes neuronales. \cite{46} propuso un enfoque basado en la relajación contínua de la arquitectura neuronal permitiendo usar descenso del gradiente para la búsqueda de la arquitectura. Los experimentos mostraron que este enfoque sobresale en encontrar arquitecturas convolucionales de alto rendimiento para la clasificación de imágenes en CIFAR-10, y en los conjuntos de datos de \textit{ImageNet}. \parencite{47} propuso un enfoque de optimización del descenso del gradiente para aprender la arquitectura de la red y parámetros simultáneamente. \parencite{48} usaron un enfoque basado en el gradiente para aprender arquitectura de redes. Los resultados experimentales en dos arquitecturas de redes diferentes: \textit{ResNet} y \textit{ResNeXt} mostraron que este enfoque recae en mejor precisión una reducción significativa en el número de parámetros. 
 
-\textit{Bayesian optimization} basado en procesos \textit{Gaussian} ha sido usado por \parencite{49} y \parencite{50} para abordar el problema de búsqueda de arquitectura de redes neuronales. En adición, muchos trabajos se enfocaron en usar modelos basados en árboles como \textit{random forests} y \textit{tree Parzen estimators} \parencite{24} para efectivamente optimizar la arquitectura de red al igual que sus hiperparámetros \parencite{52} \parencite{53} \parencite{54}. La optimización Bayesiana  puede superar a algoritmos evolutivos en algunos problemas \parencite{55}
+\textit{Bayesian optimization} basado en procesos \textit{Gaussian} ha sido usado por \cite{49} y \cite{50} para abordar el problema de búsqueda de arquitectura de redes neuronales. En adición, muchos trabajos se enfocaron en usar modelos basados en árboles como \textit{random forests} y \textit{tree Parzen estimators} \parencite{24} para efectivamente optimizar la arquitectura de red al igual que sus hiperparámetros \parencite{52} \parencite{53} \parencite{54}. La optimización Bayesiana  puede superar a algoritmos evolutivos en algunos problemas \parencite{55}
 
 \subsection{Estrategia de rendimiento}
 El objetivo de NAS es típicamente encontrar arquitecturas que puedan obtener alto rendimiento en la predicción de datos no vistos. La opción simple es ejecutar un entrenamiento estándar y la validación de la arquitectura en los datos, pero esto desafortunadamente es costoso computacionalmente y limita el número de arquitecturas que pueden ser exploradas. Investigaciones más recientes se enfocan en el desarrollo de métodos que reducen el costo de estas estimaciones de rendimiento. \\
@@ -106,13 +106,13 @@ El algoritmo AutoML de H2O se basa en el entrenamiento eficiente de los algoritm
 
 \section{Modelos preentrenados y \textit{Transfer Learning}}
 
-Durante mucho tiempo hasta ahora, ha sido un tema de investigación clave: cómo entrenar modelos \textit{deep neural} efectivos para tareas específicas con datos limitados anotados por humanos. Un hito para este problema es la introducción del \textit{transfer learning} \parencite{9} \parencite{10}. En lugar de entrenar un modelo desde cero con grandes cantidades de datos, los seres humanos pueden aprender a resolver nuevos problemas con muy pocas muestras. Este sorprendente proceso de aprendizaje está motivado por el hecho de que los seres humanos pueden utilizar conocimientos adquiridos previamente para manejar nuevos problemas. Inspirándose en esto, el aprendizaje por transferencia formaliza un marco de aprendizaje de dos fases: una fase de precapacitación para capturar el conocimiento de una o más tareas de origen y una etapa de ajuste para transferir el conocimiento capturado a las tareas de destino. Debido a la gran cantidad de conocimientos obtenidos en la fase previa al entrenamiento, la fase de \textit{fine tuning} puede permitir que los modelos manejen bien las tareas objetivo con muestras limitadas.  
+Durante mucho tiempo hasta ahora, ha sido un tema de investigación clave: cómo entrenar modelos de redes neuronales profundas efectivos para tareas específicas con datos limitados anotados por humanos. Un hito para este problema es la introducción del \textit{transfer learning} \parencite{9, 10}. En lugar de entrenar un modelo desde cero con grandes cantidades de datos, los seres humanos pueden aprender a resolver nuevos problemas con muy pocas muestras. Este sorprendente proceso de aprendizaje está motivado por el hecho de que los seres humanos pueden utilizar conocimientos adquiridos previamente para manejar nuevos problemas. Inspirándose en esto, el aprendizaje por transferencia formaliza un marco de aprendizaje de dos fases: una fase de precapacitación para capturar el conocimiento de una o más tareas de origen y una etapa de ajuste para transferir el conocimiento capturado a las tareas de destino. Debido a la gran cantidad de conocimientos obtenidos en la fase previa al entrenamiento, la fase de \textit{fine tuning} puede permitir que los modelos manejen bien las tareas objetivo con muestras limitadas.  
 
 El \textit{transfer learning} proporciona un método factible para aliviar el desafío de los datos hambrientos, y pronto se ha aplicado ampliamente al campo de la visión por computadora (CV o \textit{Computer Vision}). Una serie de CNN \parencite{78} \parencite{79} \parencite{80} se entrenan previamente en el conjunto de datos de reconocimiento visual anotado por humanos Image Net. Beneficiándose del sólido conocimiento visual distribuido en ImageNet, el ajuste fino de estas CNN preentrenadas con una pequeña cantidad de datos específicos de la tarea puede funcionar bien en las tareas posteriores. Esto desencadena la primera ola de exploración de modelos preentrenados (PTM) en la era del aprendizaje profundo. En esta ola, los PTM se utilizan para casi todas las tareas de CV, como clasificación de imágenes \parencite{81}, detección de objetos \parencite{82} y segmentación de imágenes \parencite{83}.  
 
 La comunidad de procesamiento de lenguaje natural (NLP) también era consciente del potencial de los PTM y comenzó a desarrollar PTM para tareas de NLP \parencite{84}. Para aprovechar al máximo los corpus sin etiquetar a gran escala para proporcionar un conocimiento lingüístico versátil para las tareas de NLP, la comunidad de NLP adopta el aprendizaje autosupervisado \parencite{85} para desarrollar PTM. La motivación del aprendizaje autosupervisado es aprovechar las correlaciones intrínsecas en el texto como señales de supervisión en lugar de supervisión humana. Por ejemplo, dada la oración "Beijing es la capital de China", enmascaramos la última palabra de la oración y luego requerimos modelos para predecir la posición enmascarada con la palabra "China". A través del aprendizaje autosupervisado, se pueden utilizar enormes cantidades de datos textuales sin etiquetar para capturar conocimientos lingüísticos versátiles sin una carga de trabajo intensiva. Este entorno autosupervisado, en esencia, sigue el conocido modelo de aprendizaje del lenguaje \parencite{86}.  
 
-Durante mucho tiempo, el problema de la desaparición o explosión de gradientes (Bengio et al., 1994) es el punto crítico del uso de \textit{deep neural networks} para tareas de NLP. Por lo tanto, cuando la comunidad CV avanza en la investigación de PTM profundos, la exploración temprana de la comunidad NLP se centra en el entrenamiento previo de redes superficiales para capturar significados semánticos de palabras, como Word2Vec \parencite{87} y GloVe \parencite{88}. Aunque estos \textit{embeddings} de palabras preentrenados juegan un papel importante en varias tareas de NLP, todavía enfrentan una limitación importante para representar palabras polisémicas en diferentes contextos, ya que cada palabra está representada por un solo vector denso. Un ejemplo famoso en NLP es que la palabra "banco" tiene significados completamente diferentes en las oraciones "abrir una cuenta bancaria" y "en la orilla del río". Esto motiva a los RNN de entrenamiento previo a proporcionar \textit{embeddings} de palabras contextualizadas \parencite{89} \parencite{90}, aunque el rendimiento de estos modelos aún está limitado por el tamaño y la profundidad de su modelo.  
+Durante mucho tiempo, el problema de la desaparición o explosión de gradientes (Bengio et al., 1994) es el punto crítico del uso de \textit{deep neural networks} para tareas de NLP. Por lo tanto, cuando la comunidad CV avanza en la investigación de PTM profundos, la exploración temprana de la comunidad NLP se centra en el entrenamiento previo de redes superficiales para capturar significados semánticos de palabras, como Word2Vec \parencite{87} y GloVe \parencite{88}. Aunque estos \textit{embeddings} de palabras preentrenados juegan un papel importante en varias tareas de NLP, todavía enfrentan una limitación importante para representar palabras polisémicas en diferentes contextos, ya que cada palabra está representada por un solo vector denso. Un ejemplo famoso en NLP es que la palabra 'banco' tiene significados completamente diferentes en las oraciones 'abrir una cuenta bancaria' y 'en la orilla del río'. Esto motiva a los RNN de entrenamiento previo a proporcionar \textit{embeddings} de palabras contextualizadas \parencite{89} \parencite{90}, aunque el rendimiento de estos modelos aún está limitado por el tamaño y la profundidad de su modelo.  
 
 Con el desarrollo de \textit{deep neural networks} en la comunidad de NLP, la introducción de Transformers \parencite{25} hace factible entrenar modelos neuronales muy profundos para tareas de NLP. Con Transformers como arquitecturas y el aprendizaje del modelo de lenguaje como objetivos, se proponen PTM profundos GPT \parencite{12} y BERT \parencite{11} para tareas de NLP en 2018. De GPT y BERT, podemos encontrar que cuando el el tamaño de los PTM aumenta, los PTM a gran escala con cientos de millones de parámetros pueden capturar la desambiguación polisémica, las estructuras léxicas y sintácticas, así como el conocimiento fáctico del texto. Mediante el \textit{fine tuning} de los PTM a gran escala con bastantes muestras, el rico conocimiento lingüístico de los PTM brinda un rendimiento asombroso en las tareas posteriores de NLP. Los PTM a gran escala se desempeñaron bien tanto en tareas de comprensión como de generación de idiomas en los últimos años e incluso lograron mejores resultados que el desempeño humano. Todos estos esfuerzos y logros en la comunidad de NLP permitieron que los PTM a gran escala se convirtieran en el foco de la investigación de IA, después de la última ola en la que los PTM permitieron grandes avances en la comunidad de CV.
 
@@ -137,9 +137,10 @@ Después de hacer pre-entrenamiento a BEiT, se agrega una capa de tareas sobre e
 
 La tarea de clasificación de imágenes consiste en dado imágenes como entrada clasificarlas en categorías. El modelo BEiT se evaluó en el conjunto de datos ILSVRC-2012 ImageNet, el cual consiste en 1000 clases y 1,3 millones de imágenes. Se utilizaron la mayoría de los hiperparámetros de DEiT en los experimentos de \textit{fine tuning} para hacer la comparación justa. Se redjueron los \textit{epochs} de \textit{fine tuning} en comparación con el entrenamiento desde cero, ya que BEIT ha sido pre-entrenado. En consecuencia se usó una tasa mayor de aprendizaje con decaimiento por capas.
 
-En la tabla se ve como top-1 en la clasificación de imágenes. BEIT se comparó con \textit{Vision Transformers} entrenados mediante inicialización aleatoria, pre-entrenamiento supervisado y métodos previos de aprendizaje autosupervisado. Todos los modelos comparados son de tamaño base, excepto iGPT que tiene parámetros 1,36 billones de parámetros. El entrenamiento previo se lleva a cabo en ImageNet con fines comparativos, excepto que ViT-JFT300M se entrena previamente en las 300 millones de imágenes internas de Google.
+En la tabla se ve como top-1 en la clasificación de imágenes. BEIT se comparó con \textit{Vision Transformers} entrenados mediante inicialización aleatoria, pre-entrenamiento supervisado y métodos previos de aprendizaje autosupervisado. El entrenamiento previo se lleva a cabo en ImageNet con fines comparativos.
 
-\begin{center}
+\begin{table}[h!]
+    \centering
     \begin{tabular}{||c c c c ||} 
         \hline
         Modelos & Tamaño del modelo & Resolución & ImageNet \\ [0.5ex] 
@@ -157,14 +158,17 @@ En la tabla se ve como top-1 en la clasificación de imágenes. BEIT se comparó
         BEIT384-L & 307M & $384^2$ & 86.3 \\ [1ex] 
         \hline
     \end{tabular}
-\end{center}
+    \caption{Comparación llevada cabo con ImageNet de los modelos pre-entrenadas BEIT y DEIT con diferente cantidad de hiperparámetros, en algunos casos 86 millones y en otros 307 millones de parámetros. La B en el nombre de los modelos significa que son modelos bases y la L modelos más grandes(\textit{Large}), es decir con más parámetros. Se muestra además la resolución de las imágenes usadas en los modelos y la última columna muestra el resultado de los modelos con la métrica \textit{accuracy}}
+    \label{table:1}
+\end{table}
 
 En comparación con los modelos entrenados mediante inicialización aleatoria, se ve que BEIT preentrenado mejora significativamente el rendimiento en ambos conjuntos de datos. BEIT mejora el rendimiento en ImageNet, lo que muestra la efectividad en la configuración de recursos abundantes.
 
 \subsection{BEiT en Segmentación semántica:}
 La segmentación semántica tiene como objetivo predecir una clase correspondiente para cada píxel de la imagen de entrada. BEIT se evaluó en el \textit{benchmark ADE20K} \parencite{94} con 25K imágenes y 150 categorías semánticas. En ADE20K, se usó Adam como optimizador. La tasa de aprendizaje se establece en $1e-3$ con una descomposición por capas similar a la clasificación de imágenes. 
 
-\begin{center}
+\begin{table}[h!]
+    \centering
     \begin{tabular}{||c c c ||} 
         \hline
         Modelos & ImageNet & ADE20K \\ [0.5ex] 
@@ -173,18 +177,20 @@ La segmentación semántica tiene como objetivo predecir una clase correspondien
         \hline
         Enmascaramiento por bloques & 82.77 & 42.93 \\
         \hline
-        \textit{Visual tokens} (i.e., recuperar píxels enmascarados) & 81.04 & 41.38 \\
+        Tokens visuales (i.e., recuperar píxels enmascarados) & 81.04 & 41.38 \\
         \hline
-        \textit{Visual tokens} - Blockwise masking & 80.50 & 37.09 \\
+        Tokens visuales - Enmascaramiento por bloques & 80.50 & 37.09 \\
         \hline
-        Recuperar 100\% \textit{visual tokens} & 82.59 & 40.93 \\
+        Recuperar 100\% \textit{tokens} visuales & 82.59 & 40.93 \\
         \hline
-        Enmascarar y recuperar 100\% \textit{visual tokens} & 81.67 & 36.73 \\
+        Enmascarar y recuperar 100\% \textit{tokens} visuales & 81.67 & 36.73 \\
         \hline
         Pre-entrenamiento más largo (800 \textit{epochs}) & 83.19 & 45.58 \\ [1ex] 
         \hline
     \end{tabular}
-\end{center}
+    \caption{Comparación del rendimiento de BEiT en la segmentación semántica de imágenes y la clasificación de imágenes en el \textit{benchmark ADE20K} y en ImageNet}
+    \label{table:2}
+\end{table}
 
 Se comparó BEiT con el pre-entrenamiento supervisado que se basa en datos etiquetados de ImageNet y se vió que logra un mejor rendimiento que el pre-entrenamiento supervisado, aunque BEIT no requiere anotaciones manuales para el pre-entrenamiento. Además, primero se hizo \textit{fine tune} a BEiT en ImageNet y luego al resultado se le hizo \textit{fine tune} en \textit{ADE20K}. Los resultados mostraron que hacer \textit{fine tune} como paso intermedio mejora a BEiT en la segmentación semántica.
 
